--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
     </header>
     <main>
         <div class="chart">
-            <canvas id="myChart"></canvas>
+            <canvas id="purchaseChart"></canvas>
+          </div>
+
+          <div class="chart">
+            <canvas id="coolChart"></canvas>
+          </div>
+
+          <div class="chart">
+            <canvas id="genderChart"></canvas>
           </div>
     </main>
     <footer>
